# advent_of_code_2022

./: .gitignore  CMakeLists.txt
advent_lib/: Makefile  file_handler.c  file_handler.h  libadvent.dylib
day_01/: Makefile  chal_1  challenge_1.c  error_handler.c  error_handler.h  linked_list.c  linked_list.h
day_01/chal_1.dSYM/Contents/: Info.plist
day_01/chal_1.dSYM/Contents/Resources/DWARF/: chal_1
day_02/: Makefile  main  main.c
day_02/main.dSYM/Contents/Resources/DWARF/: main
